Added styling and redux project files

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="freecodecamp's Front end development course, Calculator" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Play:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <title>Calculator</title>
   </head>
   <body>
